// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Space Size should work 1`] = `
"<div class=\\"arco-space arco-space-horizontal arco-space-align-center\\">
  <!---->
  <div class=\\"arco-space-item\\" style=\\"margin-right: 4px;\\">
    <div>aaa</div>
  </div>
  <!---->
  <div class=\\"arco-space-item\\">
    <div>bbb</div>
  </div>
</div>"
`;

exports[`Space Size should work 2`] = `
"<div class=\\"arco-space arco-space-horizontal arco-space-align-center\\">
  <!---->
  <div class=\\"arco-space-item\\" style=\\"margin-right: 8px;\\">
    <div>aaa</div>
  </div>
  <!---->
  <div class=\\"arco-space-item\\">
    <div>bbb</div>
  </div>
</div>"
`;

exports[`Space Size should work 3`] = `
"<div class=\\"arco-space arco-space-horizontal arco-space-align-center\\">
  <!---->
  <div class=\\"arco-space-item\\" style=\\"margin-right: 16px;\\">
    <div>aaa</div>
  </div>
  <!---->
  <div class=\\"arco-space-item\\">
    <div>bbb</div>
  </div>
</div>"
`;

exports[`Space Size should work 4`] = `
"<div class=\\"arco-space arco-space-horizontal arco-space-align-center\\">
  <!---->
  <div class=\\"arco-space-item\\" style=\\"margin-right: 24px;\\">
    <div>aaa</div>
  </div>
  <!---->
  <div class=\\"arco-space-item\\">
    <div>bbb</div>
  </div>
</div>"
`;
